--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header a{
   padding: 32px;
   text-decoration: none;
 }
-
+/* Primeira section*/
 #inicio{
   display: flex;
   align-items: center; 
@@ -65,5 +65,32 @@ h1, h2{
   left:0;
   width: 100%;
   z-index: -10;
+  margin-bottom: 32px;
 }
+
+/*Segunda section*/
+#clinica{
+  display: flex;
+  align-items: center; 
+  gap:32px;
+  padding: 24px 80px 128px 80px;
+  position: relative;
+  display: flex;  
+  padding: 24px 80px 128px 80px;
+  line-height: 32px;
+}
+
+.paragrafoTwo{
+  margin-bottom: 32px;
+  line-height: 32px;  
+}
+
+.list{
+  padding-left: 32px;
+}
+
+.list-option{
+ margin-bottom: 10px;
+}
+
 
