--- a/style.css
+++ b/style.css
@@ -93,4 +93,16 @@ h1, h2{
  margin-bottom: 10px;
 }
 
+/*Terceira section*/
+.terceiraSection{
+ text-align: center;
+ padding-bottom: 30px; 
+}
+
+.paragrafoThree{
+line-height: 32px;
+padding:32px 200px 32px 200px;
+}
+  
+
 
