--- a/style.css
+++ b/style.css
@@ -105,29 +105,32 @@ padding:32px 200px 32px 200px;
 }
 
 /*Quarta section*/
-#duvidas{
+#duvidas {
   display: flex;
   align-items: center;
+
 }
 
-.duvidas{
-  position:relative
+.duvida {
+  position: relative;
+  padding:15px;
 }
 
-.duvidas h3{
+.duvida h3 {
   border: 2px solid #ff725e;
   border-radius: 8px;
   cursor: pointer;
   width: 100%;
   display: flex;
-  padding: 24px;
+  padding:32px;
   white-space: nowrap;
 }
 
-.duvidas img{
+.duvida img {
   position: absolute;
-  top: 32;
+  top: 32px;
   right: 24px;
+
 }
 
 .duvida .paragrafoFour {
@@ -135,18 +138,18 @@ padding:32px 200px 32px 200px;
   border-bottom: 1px solid#ff725e;
   border-left: 1px solid#ff725e;
   border-radius: 0 0 8px 8px;
-  margin-top: -8px;
+  margin-top: -3px;
   padding: 0 24px;
   text-align: justify;
-  max-width: 685px;
   height: 0;
   opacity: 0;
   overflow: hidden;
   transition: .2s;
 }
 
-.duvida .paragrafo {
+.duvida.ativa .paragrafoFour {
   height: fit-content;
   opacity: 1;
   padding: 24px;
 }
+
