--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ padding:32px 200px 32px 200px;
   cursor: pointer;
   width: 100%;
   display: flex;
-  padding:32px;
+  padding:25px;
   white-space: nowrap;
 }
 
@@ -153,3 +153,40 @@ padding:32px 200px 32px 200px;
   padding: 24px;
 }
 
+/*Footer*/
+footer {
+  background-color: rgba(255, 152, 188, 0.25);
+  display: flex;
+  justify-content: space-between;
+  gap: 80px;
+  padding: 64px 80px;
+}
+
+footer img,
+footer .titulo {
+  display: block;
+  font-weight: 600;
+}
+
+footer nav a {
+  color: #263130;
+  display: block;
+  margin-bottom: 16px;
+  text-decoration: none;
+}
+
+footer p {
+  margin-bottom: 16px;
+  max-width: 350px;
+}
+
+footer p a {
+  color: #263138;
+  text-decoration: none;
+}
+#copyright{
+  background-color: rgb(48, 47, 47);
+  color: #ffffff;
+  padding: 25px;
+  text-align: center;
+}
